# nctools

./: .gitattributes  .gitignore  INSTALL.rst  INSTALL.txt  LICENSE.txt  MANIFEST.in  Makefile  README.rst  README.txt  build.py  contours.py  dumpgerber.py  dxf2nc  dxf2nc.1  dxf2nc.in.py  dxf2nc.py  dxf2pdf  dxf2pdf.py  dxf4gerber.1.in  dxf4gerber.in.py  dxfgeom.py  dxfgerber  dxfgerber.1  dxfgerber.1.in  dxfgerber.in.py  dxfgerber.py  dxfopt.1.in  dxfopt.in.py  dxfopt.py  dxftools.py  ftobuf.c  nc2pdf  nc2pdf.py  ncfmt.1  ncfmt.py  pylama.ini  pyproject.toml  readdxf  readdxf.awk  readdxf.c  (+8 more)
doc/: algorithm-test.py  dxf-readme.rst  experiment.py  info.rst  machine-parameters.txt  machine.txt  principles.rst  spec.rst  thoughts.rst
dxftools/: dxfgeom.py
nctools/: __init__.py  bbox.py  data.py  dumpgerber.py  dxf.py  dxf2nc.py  dxf2pdf.py  dxfgeom.py  dxfgerber.py  dxfreader.py  ent.py  fileutils.py  gerbernc.py  lines.py  nc2pdf.py  plot.py  readdxf.py  utils.py  version.py
src/: dxf2nc.py  dxf2pdf.py  dxfgerber.py  nc2pdf.py  readdxf.py  readnc.py
test/: 2xGG246T.dxf  3xMX300.dxf  4xGG246T.dxf  6xGG246T.dxf  Laag-1-A.DXF  Snijbestand 6 carrier Assy v2.dxf  busgang-csm.dxf  busgang-mm.dxf  demo.dxf  doorsnede-proto11_2000.dxf  doorsnede-proto11_R14.dxf  drawingA.dxf  eindstuk_carrier.dxf  gerber-busgang-csm.nc  gerber-busgang-mm.nc  lapjes.dxf  lapjes.nc  polyline.dxf  revo_tt.dxf  segments.py  segtest.py  snijbestand8v3.nc  snijden-CSM1.dxf  snijden-CSM2.dxf  snijden-UNIE640.dxf  snijden-continuemat1.dxf  snijden-continuemat2.dxf  snijden-multimat1.dxf  snijden-multimat2.dxf  snijtest-sirex.dxf  test1.dxf  test_dxfentities.py  vierkant100.dxf  vierkant100_afgerond.dxf  voorkant_hgz.dxf
testfiles/: 1xCST300.dxf  2xGG246T.dxf  6xGG246T.dxf  demo.dxf  lapjes.dxf  opvulling.dxf  polyline.dxf  revo_tt.dxf  snijbestand_carrier6_2.dxf  snijden-multimat1.dxf  test1.dxf  vierkant100.dxf  voorkant_hgz.dxf
tests/: pathmagic.py  test-dxfreader.py  test-lines.py  test_dxfreader.py  test_lines.py
tools/: genbackup  post-commit  replace.sed  (+2 more)
(+27 files in other folders)
