[build-system]
requires = ["build", "flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nctools"
authors = [
  { name="Roland Smith", email="rsmith@xs4all.nl" },
]
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
dynamic = ["version"]
description = "Generate and inspect NC code for a Gerber cloth cutter"
classifiers = [
   "Development Status :: 5 - Production/Stable", "Environment :: Console",
   "Intended Audience :: Manufacturing", "License :: OSI Approved :: BSD License",
   "Operating System :: OS Independent", "Programming Language :: Python :: 3 :: Only",
   "Topic :: Utilities"
]

[project.optional-dependencies]
pdf = ["pycairo >= 1.10"]

[project.urls]
Repository = "https://github.com/rsmith-nl/nctools"

[project.scripts]
dumpgerber = "nctools.dumpgerber:main"
dxf2nc = "nctools.dxf2nc:main"
dxf2pdf = "nctools.dxf2pdf:main[pdf]"
dxfgerber = "nctools.dxfgerber:main"
nc2pdf = "nctools.nc2pdf:main[pdf]"
readdxf = "nctools.readdxf:main"
